# spel

./: README.md  changelog.txt  compound_word.js  readme.txt
doc/: changelog.txt  code_guidelines.txt  community_guidelines.txt  lang  roadmap.txt  spel-charter.txt  spelt-charter.txt
doc/businessPlan/: businessPlan.tex
info/: readme.tex  update.sh
src/: .spel-node.js.swp  fileTranslate.js  libspel.js  readme.eng.txt  spel-node.js  spel-test.js  t1  t2  test.js  vocab-mwak-C2bit.txt  vocab-mwak-C3bit.txt  vocab-mwak-C4bit.txt  vocab-mwak-X1bit.txt  vocab-mwak-X2bit.txt  vocab-mwak-X3bit.txt  vocab-mwak-X4bit.txt  vocabSave.sh  vocabUpdate.js  wordPhonotactics.js
src/class/: .sentence.js.swp  clause.js  junction.js  phrase.js  quote.js  sentence.js  spel.js  subType.js  text.js  topClause.js  type.js  word.js
src/compile/: .parse.js.swp  parse.js  tokenize.js  translate.js
src/ircBots/: bots.conf  consoleBot.js  dictionary.json  genTransX.json  gramWords.eng.txt  hzak.js  ircBotBase.js  langWords-core.json  langWords-mega.json  lorumIpsum.txt  police.js  president.js  professor.js  secretary.js  security-guard.js  spelbots  spelbots.sh  sris.js  transDict.json  unique-core.json  unique-mega.json
src/lang/: .dictionary.js.swp  dictionary.js  grammar.js  language.js  synesthesia.js
src/lank/: .lank-vm.c.swp  INSTALL  Makefile  a.out  a.out.js  build.sh  emscripten_patch-lli_force-interpreter.diff  function.html  function.html.map  function.js  hello  hello.c  hello.html  hello.html.map  hello.js  hello_function.cpp  lank  lank-16bit-vm.c  lank-32bit-vm.c  lank-lib.c  lank-prez.c  lank-prez.cpp  lank-prez.html  lank-prez.html.map  lank-prez.js  lank-vm.c  lank-vm.cpp  lank-vm.cpp.2  lank-vm.cxx  lank-vm.h  lank-vm.su  lank-worker.c  lank-worker.cpp  lank-worker.js  lank-worker.js.map  lank.html  lank.html.map  lank.js  lank.js.map  lank.ll  (+5 more)
src/lib/: error.js  hof.js  io.js  wio.js
src/locale/ara/: ara.js  ara.txt  ara.txt.json
src/locale/ben/: ben.txt  ben.txt.json
src/locale/cmn/: cmn.js  cmn.txt  cmn.txt.json
src/locale/deu/: deu.js  deu.txt  deu.txt.json
src/locale/eng/: eng.ipa.txt  eng.js
src/locale/epo/: epo.js  epo.txt  epo.txt.json
src/locale/fin/: fin.js  fin.txt  fin.txt.json
src/locale/fra/: fra.js  fra.txt  fra.txt.json
src/locale/heb/: heb.js  heb.txt  heb.txt.json
src/locale/hin/: hin.js  hin.txt  hin.txt.json
src/locale/hun/: hun.js  hun.txt  hun.txt.json
src/locale/ind/: ind.js  ind.txt  ind.txt.json
src/locale/ita/: ita.js  ita.txt  ita.txt.json
src/locale/javs/: .javs.js.swp  javs.js  javs.txt  javs.txt.json
src/locale/jpn/: jpn.js  jpn.txt  jpn.txt.json
src/locale/kor/: kor.js  kor.txt  kor.txt.json
src/locale/mon/: mon.txt  mon.txt.json
src/locale/mwak/: mwak.js
src/locale/nld/: nld.js  nld.txt  (+1 more)
src/synesthesia/: agpl.txt  lorem_ipsum.txt  spel-day.css  spel-night.css  synTest.html  synesthesia-night.vim  synesthesia.js  synesthesia.txt  synesthesia.vim  synth.html  synth.sh  test.txt
src/type/: .phrase.js.swp  .sentence.js.swp  .text.js.swp  .type.js.swp  .word.js.swp  clause.js  phrase.js  quote.js  sentence.js  text.js  topClause.js  type.js  word.js
src/virtual-machine/: Makefile  Makefile.am  Makefile.in  README.txt  check.sh  compile.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  create.sh  quiz.sh
src/virtual-machine/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/virtual-machine/binary/: virtualMachine
src/virtual-machine/check/: 32GlyphWordList.txt  check.txt  encode.lyac
src/virtual-machine/create/: seed.su  test.lc  vm  vm.html  vm.html.map  vm.ll  vmlib.su
src/virtual-machine/logs/libsample_c/1.0/: log.txt
src/virtual-machine/logs/libsample_cpp/1.0/: log.txt
src/virtual-machine/manual/: SPEL-IS.html  encodingTable.html  presentation.tex
src/virtual-machine/opencl/: Makefile  Makefile.am  align_text.sh  configure.ac  dictionary.cxx  dictionary.h  generic.c  getInfo.cpp  make.sh  opencl_programmer.cxx  opencl_programmer.cxx.bak  platform.mk  prng.h  programmer.h  quiz.sh  seed.cxx  seed.h
src/virtual-machine/opencl/assets/: opencl_programmer.cl
src/virtual-machine/opencl/source/: dictionary.c  generic.c  generic.h  hello.c  hello.cl  make.sh  opencl_programmer.c  quiz.sh  seed.c  seed.h
src/virtual-machine/opencl/source/parallel/: composition_population.cl
src/virtual-machine/parallel/: parallel.h
src/virtual-machine/quiz/: check-out.txt  check-out3.txt  check_ACC_vm.c  quiz.pyac
src/virtual-machine/source/: .virtual-machine.c.swp  Makefile  Makefile.in  a.out  binary_virtualMachine-virtualMachine.su  binary_virtual_machine-virtual-machine.su  math.c  virtual-machine.c
src/virtual-machine/source/.deps/: binary_virtualMachine-virtualMachine.Po  binary_virtual_machine-virtual-machine.Po  vm-vm.Po
src/virtual-machine/source/machine_programmer/: prng.c  prng.h  programmer.c  programmer.h
src/virtual-machine/source/opencl/: make.sh  opencl_programmer.cpp
src/virtual-machine/source/opencl/assets/: opencl_programmer.cl
src/virtual-machine/source/seed/: .seed.c.swp  .seed.h.swp  binary_virtualMachine-seed.su  dictionary.c  dictionary.h  library_library_seed_a-seed.su  seed.c  seed.cpp  seed.h
src/virtual-machine/source/seed/.deps/: binary_virtualMachine-seed.Po  library_library_seed_a-seed.Po  vm-seed.Po
src/vm/: build.sh  vm.c  vm.cpp  vm.su  vmlib.c  vmlib.h
src/vocab/: allTrans.sh  ara.txt  ara.txt.json  ben.txt  cmn.txt  cmn.txt.json  date.js  defExtract.js  deu.txt  deu.txt.json  eng.txt  eng.txt.json  epo.txt  epo.txt.json  esperanto-list.txt  fin.txt  fin.txt.json  fra.txt  fra.txt.json  gtranslate.sh  heb.txt  heb.txt.json  hin.txt  hin.txt.json  hun.txt  hun.txt.json  ind.txt  ind.txt.json  ita.txt  ita.txt.json  javs.txt  jpn.txt  jpn.txt.json  jsonGenerate.js  kor.txt  kor.txt.json  mon.txt  mwak.txt  mwak.txt.json  mwakDefExtract.js  (+57 more)
src/web/: build.sh  spel-day.css  spel-night.css  spel.css  spel.html  spel.xhtml  spel.xml  spel.xsl  spelb.js  spelh.js  spelp.js  test.sh  xhtml_gen.sh
(+74 files in other folders)
